# ToyScheduler

./: .gitignore  CMakeLists.txt  GreedySolution.h  KnapsackSolution.h  KnapsackSolver.h  README.md  ResultChecker.cpp  ResultChecker.h  SolutionBase.h  Task.h  TestGenerator.cpp  TestGenerator.h  main.cpp  run_benchmark.cpp  run_benchmark.sh
src/: GreedySolution.cpp  GreedySolution.h  KnapsackSolution.cpp  KnapsackSolution.h  KnapsackSolver.cpp  KnapsackSolver.h  Task.h
test/: ResultChecker.cpp  ResultChecker.h  TestGenerator.cpp  TestGenerator.h
